@@ -28,6 +28,7 @@ GenericExecuteSynth \
 
 GenericCmdDependency "espeak-ng"
 GenericCmdDependency "mbrola"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # The following three items control punctuation levels None, Some, and All.
 # Each of these values will be substituted into the $PUNCT variable depending
