@@ -24,6 +24,7 @@ $TMPDIR/llia_phon.txt -.au | $PLAY_COMMAND -t au - >/dev/null"
 
 GenericCmdDependency "llia_phon"
 GenericCmdDependency "mbrola"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # AddVoice specifies which $VOICE string should be assigned to
 # each language and symbolic voice name. All the voices you want
