@@ -24,6 +24,7 @@ GenericExecuteSynth \
 "curl \"http://localhost:59125/process?INPUT_TEXT=`printf %s \'$DATA\'| xxd -plain | tr -d '\\n' | sed 's/\\\(..\\\)/%\\\1/g'`&INPUT_TYPE=TEXT&OUTPUT_TYPE=AUDIO&AUDIO=WAVE_FILE&LOCALE=$LANGUAGE&VOICE=$VOICE\" > $TMPDIR/mary-generic.wav && $PLAY_COMMAND $TMPDIR/mary-generic.wav"
 
 GenericCmdDependency "curl"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # The following three items control punctuation levels None, Some, and All.
 # Each of these values will be substituted into the $PUNCT variable depending
