@@ -21,6 +21,7 @@ GenericExecuteSynth \
 "pico2wave -w $TMPDIR/pico.wav -l $VOICE \'$DATA\' && $PLAY_COMMAND $TMPDIR/pico.wav"
 
 GenericCmdDependency "pico2wave"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # The following three items control punctuation levels None, Some, and All.
 # Each of these values will be substituted into the $PUNCT variable depending
